# codility

./: .gitignore  .travis.yml
olx_group_challenge/: solution.py
palladium20/: palladium20.kt
rubidium2018/: CMakeLists.txt  conanfile.txt  rubidium.cpp
rubidum2018/test_cases/: tc1.txt  tc2.txt  tc4.txt
strontium2019/: strontium.py
technetium2019/: technetium2019.py
utilities/: erathostenesSieve.hpp
yttrium2019/: yttrium2019.java
